--- a/core/designsystem/src/main/res/values/strings.xml
+++ b/core/designsystem/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
 
     <!--    home-->
     <string name="home_title">FizzFash</string>
+    <string name="end_message">모든 유저를 조회 하였습니다</string>
+    <string name="error_message">유저 정보를 조회할 수 없습니다</string>
+    <string name="retry">다시 시도</string>
 
     <!--    favorites-->
     <string name="favorites_title">Favorites</string>
