--- a/core/designsystem/src/main/res/values/strings.xml
+++ b/core/designsystem/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
     <string name="app_name">supergene-assignment</string>
+    <!--    home-->
     <string name="error_message_network">네트워크 연결이 원활하지 않습니다.</string>
     <string name="error_message_unknown">알 수 없는 오류가 발생하였습니다.</string>
+    <string name="undo">Undo</string>
 
     <!--    home-->
     <string name="home_title">FizzFash</string>
