--- a/core/designsystem/src/main/res/values/strings.xml
+++ b/core/designsystem/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
 
     <!--    favorites-->
     <string name="favorites_title">Favorites</string>
+    <string name="favorites_list_empty">즐겨찾는 유저 목록이 존재하지 않습니다.</string>
 
 </resources>
